pyclewn: break symbol completion on overloaded c++ functions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,5 +9,6 @@ include runtime/syntax/dbgvar.vim
 include regrtest.py
 include testsuite/*.py
 include testsuite/*.c
+include testsuite/*.cc
 include testsuite/Makefile
 include testsuite/README
