--- a/testsuite/Makefile
+++ b/testsuite/Makefile
@@ -1,5 +1,7 @@
 CFLAGS = -Wall -g
+CPPFLAGS = -Wall -g
 
-all: foobar
+all: foobar overloaded
 foobar: foobar.c foo.c bar.c
+overloaded: overloaded.cc
 
