--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,5 +15,5 @@ include regrtest.py
 include testsuite/*.py
 include testsuite/*.c
 include testsuite/*.cc
-include testsuite/Makefile
+include testsuite/Makefile*
 include testsuite/README
