--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,5 +14,8 @@ include .pycheckrc
 include testsuite/*.py
 include testsuite/*.c
 include testsuite/*.cc
+include testsuite/*.cpp
 include testsuite/Makefile*
 include testsuite/README
+include testsuite/function_template_sub/Makefile
+include testsuite/function_template_sub/*.cpp
