--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,8 @@ include runtime/doc/pyclewn.txt
 include runtime/syntax/dbgvar.vim
 include images/*
 include pyclewn_install.py
+include foobar.py
+include .pdbrc
 include testsuite/*.py
 include testsuite/*.c
 include testsuite/*.cc
