Remove Windows support.

--- a/.hgignore
+++ b/.hgignore
@@ -1,12 +1,6 @@
 syntax: glob
-
-*.orig
-*.pyc
 *.swp
 clewn/__version__.py
-runtime/.pyclewn_keys.pdb
-runtime/.pyclewn_keys.gdb
-runtime/.pyclewn_keys.simple
 testsuite/foobar
 testsuite/overloaded
 testsuite/function_template
@@ -15,7 +9,8 @@ MANIFEST
 logfile
 
 syntax: regexp
-
 ^dist\/.*$
 ^sphinx\/_build\/.*$
+__pycache__\/.*$
+^runtime/.pyclewn_keys.*$
 
