Use package_dir and lib as the root directory to allow running pyclewn from the source directory.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include NEWS
 include COPYING
 include INSTALL
 include MANIFEST.in
+include lib/__init__.py
 include runtime/plugin/pyclewn.vim
 include runtime/autoload/pyclewn.vim
 include runtime/.pyclewn_keys.*
