--- a/.hgignore
+++ b/.hgignore
@@ -12,6 +12,7 @@ logfile
 
 syntax: regexp
 ^dist\/.*$
+^lib\/pyclewn.egg-info\/.*$
 ^sphinx\/_build\/.*$
 __pycache__\/.*$
 ^runtime/.pyclewn_keys.*$
