--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,13 +3,7 @@ include COPYING
 include INSTALL
 include MANIFEST.in
 include lib/__init__.py
-include runtime/autoload/pyclewn.vim
-include runtime/doc/pyclewn.txt
-include runtime/macros/.pyclewn_keys.*
-include runtime/plugin/pyclewn.vim
-include runtime/syntax/dbgvar.vim
-include runtime/pyclewn.vmb
-include runtime/pyclewn-*
+include lib/clewn/runtime/pyclewn-*
 include foobar.py
 include .pdbrc
 include testsuite/*.py
