Prevent Pyclewn from running with an obsolete version of its Vim run time files.

--- a/.hgignore
+++ b/.hgignore
@@ -7,6 +7,8 @@ testsuite/function_template
 testsuite/function_template_sub/*.o
 logfile
 .coverage
+lib/clewn/runtime_version.py
+runtime/autoload/pyclewn/version.vim
 
 syntax: regexp
 ^sphinx/_build/.*$
