--- a/testsuite/Makefile.test
+++ b/testsuite/Makefile.test
@@ -2,9 +2,10 @@ CC = gcc
 CFLAGS = -Wall -g $(PLATFORM)
 CPPFLAGS = -Wall -g $(PLATFORM)
 
-all: foobar overloaded function_template
+all: foobar overloaded function_template pretty-printing
 foobar: foobar.c foo.c bar.c
 overloaded: overloaded.cc
+pretty-printing: pretty-printing.cc
 function_template: function_template.cpp
 	$(CXX) $(CPPFLAGS) $^ function_template_sub/localmax.o -o $@
 
