--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ logfile
 .coverage
 lib/clewn/runtime_version.py
 runtime/autoload/pyclewn/version.vim
+build
+@test
 
 sphinx/_build/
 lib/pyclewn.egg-info/
